startkde/plasma-shutdown/shutdown.cpp
@@ -53,8 +53,33 @@ void Shutdown::startLogout(KWorkSpace::ShutdownType shutdownType)
             return;
         }
         if (closeSessionReply.value()) {
+            ksmServerComplete();
+        } else {
+            logoutCancelled();
+        }
+    });
+}
+
+void Shutdown::ksmServerComplete()
+{
+    OrgKdeKWinSessionInterface kwinInterface(QStringLiteral("org.kde.KWin"), QStringLiteral("/Session"), QDBusConnection::sessionBus());
+    kwinInterface.setTimeout(INT32_MAX);
+    auto reply = kwinInterface.closeWaylandWindows();
+    auto watcher = new QDBusPendingCallWatcher(reply, this);
+    connect(watcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
+        watcher->deleteLater();
+        OrgKdeKSMServerInterfaceInterface ksmserverIface(QStringLiteral("org.kde.ksmserver"), QStringLiteral("/KSMServer"), QDBusConnection::sessionBus());
+        auto reply = QDBusReply<bool>(*watcher);
+        if (!reply.isValid()) {
+            qCWarning(PLASMA_SESSION) << "KWin failed to complete logout";
+            ksmserverIface.resetLogout();
+            logoutCancelled();
+            return;
+        }
+        if (reply.value()) {
             logoutComplete();
         } else {
+            ksmserverIface.resetLogout();
             logoutCancelled();
         }
     });
@@ -78,6 +103,12 @@ void Shutdown::logoutComplete()
     QDBusReply<QDBusObjectPath> reply = QDBusConnection::sessionBus().call(msg);
 
     if (!reply.isValid()) {
+        auto msg = QDBusMessage::createMethodCall(QStringLiteral("org.kde.ksmserver"),
+                                                  QStringLiteral("/MainApplication"),
+                                                  QStringLiteral("org.qtproject.Qt.QCoreApplication"),
+                                                  QStringLiteral("quit"));
+        QDBusConnection::sessionBus().call(msg);
+
         OrgKdeKWinSessionInterface kwinInterface(QStringLiteral("org.kde.KWin"), QStringLiteral("/Session"), QDBusConnection::sessionBus());
         QDBusPendingReply<> reply = kwinInterface.quit();
         reply.waitForFinished();
